--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,18 +1,20 @@
-name: Release
+name: Run Shell Script and Capture Output
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
-  release:
-    name: 'Create Releases'
+  run-script:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Release Script
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Run script and set output
+        id: script
         run: |
-          ./.github/workflows/scripts/release.sh
+          chmod +x ./.github/workflows/scripts/release.sh
+          echo "OUTPUT=$(./.github/workflows/scripts/release.sh)" >> $GITHUB_ENV
+
+      - name: Use the output
+        run: echo "The script output was '${{ env.OUTPUT }}'"
